--- a/templates/partials/scripts.html
+++ b/templates/partials/scripts.html
@@ -8,6 +8,9 @@
 <!-- CDN de Tailwind como respaldo -->
 <script src="https://cdn.tailwindcss.com"></script>
 
+<!-- Chart.js para gráficos -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 <!-- Configuracion de paleta de colores en Tailwind -->
 <script src="{% static 'js/paleta_colores.js' %}"></script>
 
@@ -19,3 +22,6 @@
 
 <!-- Modal de eliminacion para cualquier template -->
 <script src="{% static 'js/delete.js' %}"></script>
+
+<!-- Carnet Module JavaScript -->
+<script src="{% static 'js/carnet.js' %}"></script>
