--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="{% static 'css/buttons.css' %}">
     <link rel="stylesheet" href="{% static 'css/profile.css' %}">
     <link rel="stylesheet" href="{% static 'css/user-form.css' %}">
+    <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
 
     <!-- Agregar extras a la base -->
     {% block extra_head %}{% endblock %}
