Implementacion de modelos haarcascade

--- a/apps/mascota/templates/biometria_registro/biometria.html
+++ b/apps/mascota/templates/biometria_registro/biometria.html
@@ -178,7 +178,7 @@
         <!-- Sección de subida de archivos -->
         <div class="bg-white rounded-lg shadow-sm p-4 mb-5 border border-primary-100">
             <h3 class="font-semibold text-gray-700 mb-3 flex items-center">
-                <i class="fas fa-upload text-primary-500 mr-2"></i> Subida de imágenes
+                <i class="fas fa-upload text-primary-500 mr-2"></i> Subida de imágenes (Recomendado, mayor velocidad)
             </h3>
             
             <form id="file-upload-form" action="{% url 'mascota:upload_biometria' %}" method="post" enctype="multipart/form-data" class="mb-4">
